fix: text overflow시 UI가 깨지는 문제 수정

--- a/src/pages/Cafeteria/PCCafeteriaPage/PCCafeteriaPage.module.scss
+++ b/src/pages/Cafeteria/PCCafeteriaPage/PCCafeteriaPage.module.scss
@@ -119,6 +119,7 @@
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
+    word-break: break-all;
     line-height: 1.67;
     letter-spacing: -0.48px;
     color: rgb(73 73 73);
